Save/Update files [ci skip]

--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -11,7 +11,7 @@
  desc_autonomy_decreased:0 "この州の自治率は制限されており、この地域の緊張を高めています。"
  humiliated_rival:0 "$TARGET$に屈辱を与えた"
  humiliated_by_rival:0 "$TARGET$に屈辱を与えられた"
- insulted_rival:0 "ライバルを侮辱"
+ insulted_rival:0 "ライバルへの侮辱"
  annexers_legacy:0 "属国の併合"
  usury_forgiven:0 "高利を免除"
  desc_usury_forgiven:0 "教皇は正式に、我々のために高利の罪を免除した。"
@@ -1477,7 +1477,7 @@
  flavor_bng.5.b:0 "彼らが我々の土地に留まるのを阻止するよう試みる。"
  flavor_bng.6.t:0 "虎の蜂起"
  flavor_bng.6.d:0 "シェール・シャー・スールあるいはシェール・ハーンと呼ばれる人物が、我々の土地の一部に定住しているデリーの貴族たちの疑う余地のない指導者として台頭してきた。富と復讐の約束により、このカリスマ的な指導者は軍隊を育成し、彼に反対するあらゆる者に向けて行軍する準備を整えている。\nこの軍隊の長期的な目標が、デリー・スルターン朝の再生であることを予想していた中で、我々は今日、シェール・シャーの陣営からの最後通牒を受け取った。我々は王位を退き、王国を支配することを許すか、あるいは彼が我々から奪取するために剣を手にやって来るかのどちらかである。"
- flavor_bng.6.a:0 "王位を守りたいのであれば、あなたは戦わなければならない。"
+ flavor_bng.6.a:0 "王位を守りたいのであれば、戦わなければならない。"
  flavor_bng.6.b:0 "降伏しよう。"
  flavor_bng.6.b.tt:0 "（シェール・シャーは低い正統性で始まるでしょう）"
  flavor_bng.7.t:0 "ブルシュトのラージャ"
