--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -1779,8 +1779,8 @@
  carolinas_area_name:1 "クロアタン"
  carolinas_area_adj:1 "クロアタン"
  south_carolina_area:0 "サウスカロライナ"
- south_carolina_area_name:1 "リッサト"
- south_carolina_area_adj:1 "リッサト"
+ south_carolina_area_name:1 "イサティ"
+ south_carolina_area_adj:1 "イサティ"
  upper_american_georgia_area:0 "上ジョージア"
  upper_american_georgia_area_name:0 "クーサ"
  upper_american_georgia_area_adj:1 "クーサ"
