--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -178,9 +178,9 @@
  enforced_peace_against:0 "敵に対する和平を強制"
  enforced_peace_for:0 "和平の強制"
  improved_imperial_relations:0 "皇帝との関係を改善"
- IMPROVERELATIONTITLE:0 "関係の改善"
+ IMPROVERELATIONTITLE:0 "関係を改善する"
  IMPROVERELATIONDESC:0 "自国と相手国との関係を改善します。"
- CANCEL_IMPROVERELATIONTITLE:0 "関係改善を停止"
+ CANCEL_IMPROVERELATIONTITLE:0 "関係改善を停止する"
  CANCEL_IMPROVERELATIONDESC:0 "外交官を召還し、関係改善を停止します。"
  FABRICATECLAIMSTATEDESC_NOPROV:1 "国は請求権を持つことができる州を含む請求権を持っていない隣接した地方がありません。"
  FABRICATECLAIMTITLE:1 "請求権の捏造"
@@ -588,14 +588,14 @@
  NEGOTIATE_SEPARATE_PEACE_WITH:0 "$COUNTRY|Y$と個別に和平交渉を行います。"
  NEGOTIATE_PEACE_WITH_WARLEADER:0 "戦争のリーダーである$COUNTRY|Y$と交渉することで、同盟全体との和平交渉を行います。"
  PO_PD_100:0 "閣下、我々は$ENEMY$に対する圧倒的な勝利を獲得し、それらを併合する可能性を持っています。しかし、これは$RELIGION$世界の残りの部分を大きく混乱させるでしょう。"
- PO_PD_70:0 "あなたは圧倒的な勝利を獲得しています。あなたは、いくつかの州、ダカットの大量の要求、または他の条件を指示することができます。"
- PO_PD_40:0 "あなたは、総合的な勝利を獲得しています。州の要求はほとんど受け入れられるでしょう。"
- PO_PD_10:0 "あなたは勝利しています。敵国は白紙和平や、金と引き換えに平和を手にすることを受け入れるでしょう。"
+ PO_PD_70:0 "圧倒的な勝利を収めました。いくつかの州、多額のダカットの要求といった条件を指示できるでしょう。"
+ PO_PD_40:0 "完全な勝利を収めました。州の要求はほとんど受け入れられるでしょう。"
+ PO_PD_10:0 "勝利を収めました。敵は白紙和平や、金と引き換えに平和を手にすることを受け入れるでしょう。"
  PO_PD_NEG_5:0 "戦争は五分五分です。敵国がまだ戦う意思がない限り、白紙和平を受け入れる可能性が高いでしょう。"
- PO_PD_NEG_25:0 "敵国が勝っています。あなたは金、または州を引き渡すことで和平できるでしょう。"
- PO_PD_NEG_60:0 "敵は総合勝利を獲得しました。あなたは彼らに対して平和と引き換えに、少なくとも2つの州と多額のダカットを提供する必要があります。"
- PO_PD_NEG_99:0 "敵は圧倒的な勝利を獲得しました。あなたは彼らを満たすために、彼らに十分な州を提供する必要があり、あるいはさらに悪い条件を受け入れる必要があるかもしれません。"
- PO_PD_NEG_100:0 "我々は完全に敗北しており、敵は彼が望むどんな平和も指示することができます。"
+ PO_PD_NEG_25:0 "敵国が勝っています。あなたは和平の見返りとして、小額のドゥカートや、なくても問題ない州を差し出すべきです。"
+ PO_PD_NEG_60:0 "敵が完全な勝利を収めました。あなたは和平の見返りとして、少なくとも2州と多額のダカットを差し出すべきです。"
+ PO_PD_NEG_99:0 "敵が圧倒的な勝利を収めました。彼らが満足するだけの州を提供しないと、かえって悪い結果になるかもしれません。"
+ PO_PD_NEG_100:0 "我々は完全に敗北しており、敵は好きなように和平を突きつけることができます。"
  PEACEBETTER_US:0 "彼らはこの和平協定を受け入れるでしょう。もし拒否すれば、相手国には大きな混乱が生じるでしょう。"
  ANNEX:0 "彼らは我が国の全土併合を要求します。（ゲームオーバー）"
  WHITE_PEACE:0 "白紙和平です。いずれの国も得失は生じません。"
@@ -670,7 +670,7 @@
  competing_superpower:0 "列強国の競り合い"
  religious_friend:0 "異教徒と闘う兄弟"
  WE_NOTSAME_RELIGIONS_GROUP:0 "同じ宗教グループではありません。"
- NO_WAR_FIGHTING_WAR_TOGETHER:0 "あなたは戦争を共に戦っている国に対して宣戦布告することはできません。"
+ NO_WAR_FIGHTING_WAR_TOGETHER:0 "共に戦っている国に対して宣戦を布告することはできません。"
  NO_WAR_TRANSFER_TRADE_POWER:0 "交易力の移譲関係にある国と戦争を始めることはできません。"
  WE_GIVING_FLEET_ACCESS:0 "既に港湾使用許可を与えています。"
  WE_NOT_GIVING_FLEET_ACCESS:0 "港湾使用許可を与えていません。"
@@ -822,7 +822,7 @@
  PEACE_GRANT_INDEPENDANCE:0 "$DEFENDER$が$ATTACKER$に独立を与えます。"
  PEACE_DONT_GRANT_INDEPENDANCE:0 "§R$ATTACKER$は$DEFENDER$の従属国にとどまります。§!"
  WHITE_PEACE_INDEPENDANCE:0 "白紙和平。§R$ATTACKER$は$DEFENDER$の従属国にとどまります。§!"
- PEACEOFFER_DEMANDED_CAPITAL:0 "あなたは彼らの首都を要求しているので、他の州を要求することはできません。"
+ PEACEOFFER_DEMANDED_CAPITAL:0 "彼らの首都を要求しているので、他の州を要求することはできません。"
  PEACEOFFER_CANNOT_TAKE_LAST:0 "$TARGET$の最後の州の獲得と従属国化は同時に行えません。"
  PEACEOFFER_CANNOT_RETURN_LAST:0 "$TARGET$の最後の州の返還を強制することはできません。"
  PEACEOFFER_WILL_LOSE_ALL_PROVINCES:0 "$TARGET$は終戦後には存在しません。"
