--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -152,7 +152,7 @@
  institution_events.52.a:0 "彼らに商取引を拡大する権利を与えよう。"
  institution_events.52.b:0 "許可できない！"
  institution_events.53.t:0 "交易商への譲歩"
- institution_events.53.d:1 "[From.GetAdjective]の港である[trade_company_province.GetName]で活動する商魂たくましい交易商たちは、地元の領主から多大な譲歩を得ることができた。彼らは工場を拡張し、小さな砦を建設して地域の一部を支配下に置いた。この新しい取り決めは、地元の領主が世界の交易網に繋がる機会となるが、[From.Monarch.GetHerHis]の土地へと直接的に拡大するための簡単な言い訳としても使えるだろう..."
+ institution_events.53.d:1 "[From.GetAdjective]の港である[trade_company_province.GetName]で活動する商魂たくましい交易商たちは、地元の領主から多大な譲歩を得ることができた。彼らは工場を拡張し、小さな砦を建設して地域の一部を支配下に置いた。この新しい取り決めは、地元の領主が世界の交易網に繋がる機会となるが、[From.Monarch.GetHerHis]の土地へと直接的に拡大するための簡単な言い訳としても使えるだろう…"
  institution_events.53.a:0 "素晴らしい…"
  institution_events.53.a.tt:1 "[From.GetAdjective]の交易力が減少し、我々はその地方の一つで請求権を獲得している。将来、[From.GetUsableName]が我々の交易商を追放することを選択した場合、我々は§Y交易戦争§!の開戦事由を得るかもしれない。"
  institution_events.54.t:0 "交易商の不満"
@@ -4256,7 +4256,7 @@
  court_and_country_events.100.c:0 "[Root.Capital.GetCapitalName]の宮廷は荒廃している。"
  random_events.23.b.tt:0 "インフルエンザは隔離されていない州から隣接する州へと広がる可能性があります。"
  culture_religion_events.1.t:0 "[Root.Heir.GetName]と[Root.given_teacher_culture.GetCultureName]の人々"
- culture_religion_events.1.d:0 "During [Root.Heir.GetHerHis] education our [Root.Heir.GetTitle], [Root.Heir.GetName], has come to be very close to our royal advisor, [Root.Adm_Advisor.GetName], forming a special bond both to [Root.Adm_Advisor.GetHerHim] and to the [Root.given_teacher_culture.GetCultureName] people of [Root.Adm_Advisor.GetHerHis] homeland.\n[Root.Heir.GetName]'s travels in our [Root.given_teacher_culture.GetCultureName] lands have done wonders for the popularity of our dynasty, but it has also raised more than a few eyebrows in [Root.Capital.GetName]. Our nobles, led by the demanding [Root.capital_noble.GetName], are starting to worry that [Root.Heir.GetName] will favor [Root.given_teacher_culture.GetCultureName] subjects when [Root.Heir.GetSheHe] ascends to the throne and have begun to plot against [Root.Heir.GetHerHim] and [Root.Adm_Advisor.GetName] at court. They demand that we chastize the [Root.Heir.GetTitle] and guarantee the rights of the nobility."
+ culture_religion_events.1.d:0 "[Root.Heir.GetHerHis]が教育を受ける間に、我々の[Root.Heir.GetTitle]である[Root.Heir.GetName]は、我々の王室の顧問である[Root.Adm_Advisor.GetName]と非常に緊密になり、[Root.Adm_Advisor.GetHerHim]と[Root.Adm_Advisor.GetHerHis]の故郷である[Root.given_teacher_culture.GetCultureName]の人々の双方に対して特別な絆を形成している。\n[Root.Heir.GetName]による[Root.given_teacher_culture.GetCultureName]の土地への旅は、我々の王朝への人気という面で良い影響を与えているが、それはまた[Root.Capital.GetName]において、かなりの者が眉を上げている。我々の貴族であり、多くの要求を率いる[Root.capital_noble.GetName]は、[Root.Heir.GetSheHe]が即位した時に、[Root.Heir.GetName]が[Root.given_teacher_culture.GetCultureName]の国民を偏愛するだろうと懸念し始めており、宮廷において[Root.Heir.GetHerHim]と[Root.Adm_Advisor.GetName]に対する陰謀を開始している。彼らは、[Root.Heir.GetTitle]を追討し、貴族の権利を保証することを要求している。"
  culture_religion_events.1.a:0 "代わりに、[Root.capital_noble.GetName]に若い[Root.Heir.GetTitle]を指導させるのが最良だ。"
  culture_religion_events.1.b:0 "[Root.Heir.GetName]はこの中に我々の祝福を持っている。"
  culture_and_religion_opinion_tooltip:1 "§Y[Root.new_ruler_religion.GetReligionName]§!宗教のすべての国家は、彼らの我々に対する評価を§G35§!増加させるでしょう。\n§Y[Root.new_ruler_culture.GetCultureName]§!文化のすべての国家は、彼らの我々に対する評価を§G35§!増加させるでしょう。"
