--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1934,7 +1934,7 @@
  native_subjects_title:0 "従属国の獲得"
  native_subjects_desc:0 "誰もそれを認識しない力の何が良いのだろう？我々は[Root.GetName]のような国家に期待される、敬意を払う従属国を獲得する必要がある。"
  native_unite_home_area_title:0 "地盤地域の統合"
- native_unite_home_area_desc:0 "自身の地盤としている地域すら支配できなければ、他国が我々を恐れることなど期待できない。団結しよう!"
+ native_unite_home_area_desc:0 "自身の地盤としている地域すら支配できなければ、他国が我々を恐れることなど期待できない。団結しよう！"
  native_unite_home_region_title:0 "地盤地方の統合"
  native_unite_home_region_desc:0 "試練に対し成功可能な軍事機構を構築するため、我々が尽力すべき時が来た。我々は、我々の地域の真の覇権者となり、すべての人に尊敬され、恐れられなければならない。"
  native_colonize_title:0 "先住民地域の植民地化"
@@ -1966,7 +1966,7 @@
  oceania_subjects_title:0 "従属国の獲得"
  oceania_subjects_desc:0 "誰もそれを認識しない力の何が良いのだろう？我々は[Root.GetName]のような国家に期待される、敬意を払う従属国を獲得する必要がある。"
  oceania_unite_home_area_title:0 "地盤地域の統合"
- oceania_unite_home_area_desc:0 "自身の地盤としている地域すら支配できなければ、他国が我々を恐れることなど期待できない。団結しよう!"
+ oceania_unite_home_area_desc:0 "自身の地盤としている地域すら支配できなければ、他国が我々を恐れることなど期待できない。団結しよう！"
  oceania_unite_home_region_title:0 "地盤地方の統合"
  oceania_unite_home_region_desc:0 "試練に対し成功可能な軍事機構を構築するため、我々が尽力すべき時が来た。我々は、我々の地域の真の覇権者となり、すべての人に尊敬され、恐れられなければならない。"
  oceania_colonize_title:0 "オセアニアの植民地化"
