--- a/source/localisation/north_america_redone_l_english.yml
+++ b/source/localisation/north_america_redone_l_english.yml
@@ -128,7 +128,7 @@
  PROV4885:0 "アヴォイル"
  PROV4886:0 "ナソニ"
  PROV4887:0 "Cochati"
- PROV4888:0 "Tatteroa"
+ PROV4888:0 "タッテロア"
  PROV4889:0 "Mohetan"
  PROV4890:0 "Kichessipirini"
  PROV4891:0 "ピクトゥク"
@@ -221,7 +221,7 @@
  PROV_ADJ4885:0 "アヴォイル"
  PROV_ADJ4886:0 "ナソニ"
  PROV_ADJ4887:0 "Cochati"
- PROV_ADJ4888:0 "Tatteroa"
+ PROV_ADJ4888:0 "タッテロア"
  PROV_ADJ4889:0 "Mohetan"
  PROV_ADJ4890:0 "Kichessipirini"
  PROV_ADJ4891:0 "ピクトゥク"
