--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -44,8 +44,8 @@
  MON_MIL_LONG:0 "軍事"
  MON_ADM_LONG:0 "統治"
  PROVINCECORECOSTINCREASE:0 "§Y中核化コストの増加§!\n§Y$COUNTRY$§!の国家の伝統は、征服した場合のこの州の中核化をより高価にするでしょう。"
- RECRUIT_CANT_AFFORD_D:0 "あなたは、少なくとも§Y$COST$§W£dip£の外交点が必要です。"
- RECRUIT_CANT_AFFORD_M:0 "あなたは、少なくとも§Y$COST$§W£mil£の軍事点が必要です。"
+ RECRUIT_CANT_AFFORD_D:0 "§Y$COST$§W£dip£以上必要です。"
+ RECRUIT_CANT_AFFORD_M:0 "§Y$COST$§W£mil£以上必要です。"
  RECRUIT_EXPLORER_IRO:1 "§Y探検家を募集§!\nこれには§Y$COST$§!£dip£のコストがかかります。\n"
  RECRUIT_CONQUISTADOR_IRO:1 "§Y征服者の募集§!\nこれには§Y$COST$§!£mil£のコストがかかります。\n"
  RECRUIT_GENERAL_IRO:1 "§Y将軍の募集§!\nこれには§Y$COST$§!£mil£のコストがかかります。\n"
@@ -1970,11 +1970,11 @@
  cherokee_emperor:0 "チェロキー皇帝"
  cherokee_emperor_desc:0 "我々の族長の一人を外国への代表として選出することによって、我々は彼らとの交渉と合意のための能力をはるかに高めることができる。"
  MOVE_TRADE_PORT_ALREADY_TRADE_PORT:0 "あなたの主要な交易都市はすでにこのノードに位置しています。"
- MOVE_TRADE_PORT_ONLY_CITY:0 "交易首都は完全な都市にのみ移動することができます。"
- MOVE_TRADE_PORT_CORE:0 "交易首都は中核州にのみ移動することができます。"
- MOVE_TRADE_PORT_AT_WAR:0 "戦争中に交易首都を移動することはできません。"
- MOVE_TRADE_PORT_DIPLOMATIC:0 "あなたは交易首都を移動するのに§Y$POWER$§!£dip£が必要です。"
- MOVE_TRADE_PORT_NOT_OUR_PROV:0 "そこに交易首都を移動させるために、あなたは$NAME|Y$を所有し、支配する必要があります。"
+ MOVE_TRADE_PORT_ONLY_CITY:0 "交易首都は完全な都市にのみ移転することができます。"
+ MOVE_TRADE_PORT_CORE:0 "交易首都は中核州にのみ移転することができます。"
+ MOVE_TRADE_PORT_AT_WAR:0 "戦争中に交易首都を移転することはできません。"
+ MOVE_TRADE_PORT_DIPLOMATIC:0 "交易首都を移転させるには§Y$POWER$§!£dip£以上必要です。"
+ MOVE_TRADE_PORT_NOT_OUR_PROV:0 "そこに交易首都を移転させるには、$NAME|Y$を領有し、支配する必要があります。"
  KUR_ideas:0 "クールラントのアイデア"
  KUR_ideas_start:0 "クールラントの伝統"
  KUR_ideas_bonus:0 "クールラントの宿願"
@@ -6722,7 +6722,7 @@
  horde_loyalty:0 "遊牧民の忠誠"
  horde_loyalty_desc:0 "国民の忠誠心は疑う余地がない。ハーンの繁栄した支配下で生きてきた魂は、そこから離れようとは思わないだろう。"
  watchers_of_the_silk_road:0 "シルクロードの番人"
- watchers_of_the_silk_road_desc:0 "我々は建設もしなければ交易もしない。必要なものは奪う...時には必要以上に。我が戦士たちは外国商人とその技術を注意深く監視を続け、今や我々は交易品輸送輸送において最も安全な道を知っている。"
+ watchers_of_the_silk_road_desc:0 "我々は建設もしなければ交易もしない。必要なものは奪う…時には必要以上に。我が戦士たちは外国商人とその技術を注意深く監視を続け、今や我々は交易品輸送輸送において最も安全な道を知っている。"
  a_magnanimous_empire:0 "寛大な帝国"
  a_magnanimous_empire_desc:0 "大ハーンの繁栄は、その恐るべき剣だけでなく、賢明にも彼に跪いた者たちへの格別な敬虔さでも知られている。この寛容な帝国を歓迎した者は、帝国の一員として扱われる。"
  theocracy_gov_ideas:0 "神聖アイデア"
