--- a/source/localisation/prov_names_l_english.yml
+++ b/source/localisation/prov_names_l_english.yml
@@ -908,23 +908,23 @@
  PROV929:0 "グアル"
  PROV930:1 "カシタ"
  PROV931:0 "クーサ"
- PROV932:1 "Issati"
+ PROV932:1 "イサティ"
  PROV933:1 "イスワ"
  PROV934:1 "Tsoyaha"
- PROV935:1 "Chiaha"
+ PROV935:1 "チアハ"
  PROV936:1 "ジョアラ"
- PROV937:1 "Skarureh"
+ PROV937:1 "スカルレ"
  PROV938:1 "ポモウイク"
  PROV939:0 "カスキノンポ"
  PROV940:1 "Kentahke"
- PROV941:1 "Ouasioto"
+ PROV941:1 "ワーシオト"
  PROV942:1 "Waayaanthanwa"
- PROV943:1 "Atchakangouen"
+ PROV943:1 "アチャカンゴウエン"
  PROV944:1 "ボデワデミク"
  PROV945:1 "ミシガミ"
  PROV946:1 "Hotaawathipi"
  PROV947:1 "ケンタイエントンガ"
- PROV948:1 "Ohiyo"
+ PROV948:1 "オーイヨー"
  PROV949:0 "モナカン"
  PROV950:0 "チェサピーク"
  PROV951:0 "カナワ"
@@ -968,7 +968,7 @@
  PROV989:1 "アティネーノンナハク"
  PROV990:0 "メイソウナ"
  PROV991:1 "Odishkwaagamiig"
- PROV992:1 "Weskarini"
+ PROV992:1 "ウェスカリニ"
  PROV993:1 "オシアガ"
  PROV994:0 "スタダコナ"
  PROV995:1 "Toutouskak"
@@ -2490,11 +2490,11 @@
  PROV2524:1 "Waapi-nipi"
  PROV2525:1 "Chalahgawtha"
  PROV2526:0 "シャテラ"
- PROV2527:1 "Atali"
+ PROV2527:1 "アタリ"
  PROV2528:0 "ヤズー"
  PROV2529:0 "ナチェズ"
  PROV2530:1 "Taneks-Haya"
- PROV2531:1 "Abihka"
+ PROV2531:1 "アビカ"
  PROV2532:1 "マヴィロ"
  PROV2533:0 "チャトト"
  PROV2534:0 "ユスタガ"
@@ -2503,7 +2503,7 @@
  PROV2537:1 "イチシ"
  PROV2538:1 "Ocute"
  PROV2539:0 "モカマ"
- PROV2540:1 "Etowah"
+ PROV2540:1 "エトワ"
  PROV2541:2 "サルーダ"
  PROV2542:0 "クサボ"
  PROV2543:0 "ワカマー"
@@ -2517,7 +2517,7 @@
  PROV2551:1 "Calicula"
  PROV2552:0 "マナホアック"
  PROV2553:1 "Patawomac"
- PROV2554:1 "Nentego"
+ PROV2554:1 "ネンテゴー"
  PROV2555:0 "オニアソント"
  PROV2556:1 "Onojutta"
  PROV2557:0 "アトラクウェイ"
