--- a/source/localisation/tradenodes_l_english.yml
+++ b/source/localisation/tradenodes_l_english.yml
@@ -75,7 +75,7 @@
  TRADE_MISSION_OFFICE:0 "交易から資金を回収"
  TRADE_MISSION_TRANSIT:0 "交易力を送出"
  TRADE_MISSION_OFFICE_DESC:0 "交易から徴収することで資金を稼ぐことができます。交易首都ノード以外では、商人を駐在させている限り徴収できます。もし商人を召喚した場合、その交易ノードは交易力を送出するだけになります。"
- TRADE_MISSION_TRANSIT_DESC:0 "交易首都を有さない、交易力があるどのノードも中継ノードとなります。あなたの力はそこで交易の繋がり、交易価値を下流へ連鎖させるでしょう。"
+ TRADE_MISSION_TRANSIT_DESC:0 "交易首都ではない、交易力があるどのノードも中継ノードとなります。そのノードでの交易力は交易の繋がり、交易価値を下流へ連鎖させるでしょう。"
  NON_CAPITAL_OFFICE_2:0 "非交易首都での交易からの徴収：$VAL$"
  ENVOY_TRADING_TRADE_MISSION_TRANSIT:1 "$NAME$は§Y$FROMPROV$§W内の交易力を§Y$TOPROV$§Wに移しています。"
  ENVOY_TRADING_TRADE_MISSION_OFFICE:0 "$NAME$は§Y$PROV$§Wでの交易力を徴収しています。"
@@ -162,7 +162,7 @@
  SV_TRADE_COMPANY_INCOME:0 "交易会社の州によって生み出された収入：$INCOME|Y$¤"
  SV_TRADE_COMPANY_POWER:0 "交易会社の州によって生み出された交易力：$POWER|Y$"
  SV_TRADE_COMPANY_CONTROL:0 "交易会社は現在、$REGIONNAME$の州の交易力の$THEIR|Y$を支配しています。合計値は$TOTAL|Y$です。"
- SV_TRADE_COMPANY_CONTROL_DESC:0 "この地方の交易支配者となるには州の交易力の$VAL|Y$%が必要です。あなたは現在$MYVAL|Y$%支配しています。"
+ SV_TRADE_COMPANY_CONTROL_DESC:0 "この地方の交易支配者となるには州の交易力の$VAL|Y$%が必要です。現在$MYVAL|Y$%支配しています。"
  SV_TRADE_COMPANY_FLEET:0 "我々の交易会社の州は$VAL|Y$の海軍扶養限界を与えます。"
  SV_TRADE_DOMINANT_TRADER:0 "我々の交易会社は、この地域で最も支配的な交易商です。"
  SV_TRADE_DOMINANT_TRADER_OTHER:0 "$NAME|Y$はこの地域で最も支配的な交易商です。"
