--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -153,9 +153,9 @@
  GRANT_GENERALSHIP:0 "将軍位を付与"
  GRANT_ADMIRALSHIP:0 "提督位を付与"
  GRANT_GENERALSHIP_INFLUENCE:0 "§YNobility§!の権力が10年間§Y20§!上昇します。\n"
- INTERACTION_COOLDOWN_TOOLTIP:0 "§R$INTERACTION|Y$を使用することができるのは$NUM|Y$年に1回だけです。あなたは$DATE|Y$に再びそれを使用できます。§!"
+ INTERACTION_COOLDOWN_TOOLTIP:0 "§R$INTERACTION|Y$は$NUM|Y$年に一度だけ使用できます。$DATE|Y$に再び使用できるようになります。§!"
  INTERACTION_ASK_FOR_CONTRIBUTION_TOOLTIP:0 "この階級から寄付を求めることができるのは§Y2§!年に1回だけです。"
- MANAGE_ATTITUDE_DESC:0 "外交姿勢の管理を有効にすると§Y$COUNTRY$§!に対するあなたの国の態度を決定することができます。あなたの外交姿勢の管理が有効でない場合は、あなたの外交態度が自動的に設定されます。"
+ MANAGE_ATTITUDE_DESC:0 "外交姿勢の管理を有効にすると§Y$COUNTRY$§!に対するあなたの国の態度を決定することができます。外交姿勢の管理が有効でない場合は、あなたの外交態度が自動的に設定されます。"
  MANAGE_ATTITUDE_CANNOT_SUBJECT:0 "§R対象国の外交姿勢の管理を有効にすることはできません。§!"
  MANAGE_ATTITUDE_CANNOT_ALLY:0 "§R同盟国の外交姿勢の管理を有効にすることはできません。§!"
  MANAGE_ATTITUDE_CANNOT_RIVAL:0 "§Rライバルの外交姿勢の管理を有効にすることはできません。§!"
@@ -640,7 +640,7 @@
  BUILD_UNIT_NOT_WHEN_MOTHBALLED:0 "§R使用停止されている海軍ユニットを構築することはできません。§!\n"
  BUILD_UNIT_NOT_WHEN_AUTO_TRANSPORTING:0 "§R輸送されているユニットを構築することはできません。§!\n"
  BUILD_UNIT_NOT_AT_SEA:0 "§R公海上で海軍ユニットを構築することはできません。§!\n"
- THREATENWARTITLE:0 "武力脅迫"
+ THREATENWARTITLE:0 "武力で脅迫する"
  THREATENWARDESC:0 "これは、あなたが主張あるいは中核州を有する戦争で彼らを脅かすものです。彼らがあなたをどれだけ恐れているかによって、彼らは引き下がる可能性があります。もしそうでなければ、その州を巡って戦争が始まります。一方、彼らが受け入れると、あなたは州を獲得し、停戦が成立します。"
  THREATENWAR_DESC:0 "戦争の脅威の下で我々は、$THEM$に対し$PROV|Y$を要求します。"
  THREATENWAR_CLAIM:0 "§Y$TAKERS$§!の請求権により、我々は彼らが拒否した場合$CBTYPE$戦争を宣言します。"
