Save/Update files [ci skip]

--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -183,23 +183,23 @@
  CANCEL_IMPROVERELATIONTITLE:0 "関係改善を停止する"
  CANCEL_IMPROVERELATIONDESC:0 "外交官を召還し、関係改善を停止します。"
  FABRICATECLAIMSTATEDESC_NOPROV:1 "国は請求権を持つことができる州を含む請求権を持っていない隣接した地方がありません。"
- FABRICATECLAIMTITLE:1 "請求権の捏造"
+ FABRICATECLAIMTITLE:1 "請求権を捏造する"
  FABRICATECLAIMSTATEDESC:0 "隣接する地方の請求権を捏造します。"
  FABRICATECLAIMDESC:1 "隣接する州の請求権を捏造します。"
  FABRICATECLAIMDESC_NOPROV:1 "請求権を捏造可能な隣接する州がありません。"
- JUSTIFY_TRADE_CONFLICTTITLE:0 "交易紛争の正当化"
+ JUSTIFY_TRADE_CONFLICTTITLE:0 "交易紛争を正当化する"
  JUSTIFY_TRADE_CONFLICTDESC:0 "あなたの交易を脅かす国との交易紛争を正当化します。"
  JUSTIFY_TRADE_CONFLICT_NO_POWER:1 "$WHO$はあなたが全体の$OURVAL|0%$以上の交易力を持つ交易ノードに交易力を持たなければなりません。"
  JUSTIFY_TRADE_CONFLICT_LOW_POWER:1 "$WHO$はあなたが全体の$OURVAL|0%$以上交易力を持つ交易ノードで、全体の$VAL|0%$以上の交易力を持たなければなりません。現在あなたが$MAXOURS|0%$持つ$NODE$で彼らは$MAX|0%$持っています。"
- TRANSFER_TRADE_POWERTITLE:0 "交易力の移譲を強要"
+ TRANSFER_TRADE_POWERTITLE:0 "交易力の移譲を強要する"
  TRANSFER_TRADE_POWERDESC:0 "$WHO$があなたに交易力を送出したいか尋ねます。"
  TRANSFER_TRADE_POWER_SELECT_DESC:0 "$WHO$に対して交易力の一部を送出させる提案をしますか？"
  CANCEL_TRANSFER_TRADE_POWER_SELECT_DESC:0 "$WHO$との交易力の移譲関係を取り消しますか？"
  CANCEL_TRANSFER_TRADE_POWER_SELECT_DESC_GIVE_CB:0 "威信を$PRESTIGEHIT|R$失い、$WHOS$の外交評価が数年にわたって傷つくでしょう。この関係は講和条約によって決められたため、$WHO$は私たちに交易紛争の開戦事由を得るでしょう。"
- CANCEL_TRANSFER_TRADE_POWERTITLE:0 "交易力の移譲の中断"
+ CANCEL_TRANSFER_TRADE_POWERTITLE:0 "交易力の移譲を中断する"
  CANCEL_TRANSFER_TRADE_POWERDESC:0 "交易力の移譲関係を取り消します。"
- INFILTRATETITLE:0 "政府への潜入"
- CANCEL_INFILTRATETITLE:0 "政府への潜入の取り消し"
+ INFILTRATETITLE:0 "政府へ潜入する"
+ CANCEL_INFILTRATETITLE:0 "政府への潜入を中止する"
  SABOTAGETITLE:0 "評判失墜工作"
  SABOTAGEDESC:0 "対象国とそのライバル、敵と近隣諸国の間の評判を妨害します。"
  SABOTAGEDESCDERIVED:0 "評判失墜工作は$ADJ|Y$における諜報網規模を$COST|R$減らし、以下の効果があります：\n$DESC$\n\nこれは$DATE|Y$まで続きます。"
