--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -4468,8 +4468,8 @@
  ideagroups.1929.t:0 "The Best Training"
  ideagroups.1929.d:0 "The sublime training of our people in the hunting grounds has always granted our horde a good number of experienced soldiers. The taming of birds of pray has made one young man stand out from all his fellows and be appointed general."
  ideagroups.1929.a:0 "Good hunting."
- ideagroups.1930.t:0 "White Moon"
- ideagroups.1930.d:0 "A white moon has appeared in the sky, its blurred edges pouring with light. [Root.Adm_Advisor.GetName] has warned our ruler about the dangers of not honoring it as it should be done. A feast shall be celebrated to admire this rare phenomenon, people from all over the nation shall come and rejoice themselves with the dull shimmer of the moon."
+ ideagroups.1930.t:0 "白月"
+ ideagroups.1930.d:0 "白き月が空に現れ、その幽かな境界線から光が注がれている。[Root.Adm_Advisor.GetName]はこの現象を軽んじるべきでは進言し、国中から人々が集まってこの珍しい現象を祝う宴が開かれ、月の淡い輝きを堪能している。"
  ideagroups.1930.a:0 "素晴らしい！"
  ideagroups.1931.t:0 "Taming Provinces"
  ideagroups.1931.d:0 "A horde approaching is something that most nations are eager to avoid. Our ferocity is well known among our subjects and their desire to please us is now almost absolute - or at least the desire to keep their houses."
