--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -1155,19 +1155,19 @@
  HASGUARANT:0 "我々はすでに彼らを保障しています。"
  WARNTITLE:0 "警告を送る"
  HASWARN:0 "我々はすでに警告を送っています。"
- MILACCTITLE:0 "軍事通行権の要請"
+ MILACCTITLE:0 "軍事通行権を要請する"
  MILACCNEWDESC:0 "$COUNTRY$へ軍事通行権を要請しますか？これにより我々の軍隊が彼らの領土を通行することを可能にします。"
  MILACCDESC:0 "かの国の領土通行権を要求します。"
  MILACCREQDESC:0 "$COUNTRY$は我々に軍事通行権を要請しています。承諾することにより、彼らの軍隊が我々の領土内を進軍することが可能になります。"
  MILACCREQWARWITH:0 "彼らは$COUNTRYLIST|Y$と戦争中です。"
- CANCELMILACCDESC:0 "彼らの国への軍事通行権をキャンセル"
- CANCELMILACCTITLE:0 "軍事通行権をキャンセル"
- OFFERMILACCTITLE:0 "軍事通行権の提供"
+ CANCELMILACCDESC:0 "彼の国への軍事通行権を取り消します。"
+ CANCELMILACCTITLE:0 "軍事通行権を取り消す"
+ OFFERMILACCTITLE:0 "軍事通行権を提供する"
  OFFERMILACCNEWDESC:0 "$COUNTRY$に軍事通行権を提供しますか？これは彼らの軍隊が我々の領土に駐留するのを可能にします。"
  OFFERMILACCDESC:0 "彼らの軍隊が我々の領土に駐留するのを可能にします。"
- REVOKEMILACCTITLE:0 "軍事通行権の取り消し"
- REVOKEMILACCNEWDESC:0 "$COUNTRY$へ提供している軍事通行権を取り消しますか？これを行うことにより、彼らの軍隊が我々の領内を通行することを防ぎます。"
- REVOKEMILACCDESC:0 "彼らの軍隊が我々の領土内に駐留する権利を取り消します。"
+ REVOKEMILACCTITLE:0 "軍事通行権を剥奪する"
+ REVOKEMILACCNEWDESC:0 "$COUNTRY$へ提供している軍事通行権を剥奪しますか？これを行うことにより、彼らの軍隊が我々の領内を通行することを防ぎます。"
+ REVOKEMILACCDESC:0 "彼らの軍隊が我々の領土内に駐留する権利を剥奪します。"
  NEGOTIATETITLE:0 "交渉を開始"
  NEGOTIATEDESC:0 "金銭、土地その他を取引するための交渉を始めます。"
  SENDGIFTNEWDESC:0 "$COUNTRY$に贈り物を送りますか？これは§Y$COST$§!¤のコストにより§Y$MONTHS$§!ヶ月間、関係が§G$OPINION$§!改善されます。"
